src/widgets/snapshots/rvision__widgets__theme_editor__tests__snapshot_role_with_attrs_set.snap
---
source: src/widgets/theme_editor.rs
assertion_line: 968
expression: render(&e)
---
desktop_background     Sample text                
window_frame                                      
window_title                  Foreground...       
window_title_inactive         Background...       
menu_bar                                          
menu_selected          [X] Bold      [X] Underline
menu_disabled          [ ] Dim       [ ] Reverse  
menu_hotkey            [ ] Italic    [ ] Blink    
status_bar                  Restore Defaults      
status_key                                        
     Save       Cancel
